demo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: docker-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docker-demo
    spec:
      containers:
      - image: dockerpac/docker-demo:latest
        name: docker-demo
        ports:
        - containerPort: 8080
