demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: dockerdemo
  sessionAffinity: None
  type: ClusterIP
