demo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "false"
spec:
  ingressClassName: "nginx"
  rules:
  - host: $(URL_HOST)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-demo
            port: 
              number: 80
